--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
 		<load src="./partials/testimonial.html"/>
 		<load src="./partials/footer.html"/>
 
+	<script type="module" src="./js/sections/faq.js"></script>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
