--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&display=swapfamily=Open+Sans:wght@700&display=swap" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&display=swapfamily=Open+Sans:wght@7400;00&display=swap" rel="stylesheet">
+		
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="./css/styles.css" />
@@ -23,6 +23,8 @@
 		<load src="./partials/faq.html"/>
 		<load src="./partials/testimonial.html"/>
 		<load src="./partials/footer.html"/>
+
+		<load src="./partials/modal-animal-detail.html"/>
 
     <script type="module" src="./main.js"></script>
   </body>
